--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@formspree/react": "^2.2.4",
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
