--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-simple-typewriter": "^3.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
