--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@axetroy/react-github-calendar": "^2.0.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@formspree/react": "^2.2.4",
@@ -20,6 +21,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-github-calendar": "^3.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-simple-typewriter": "^3.0.1",
