--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "port-folio",
-  "homepage": "https://code-soham.github.io/",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
