--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.2.2",
+    "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-simple-typewriter": "^3.0.1",
